--- a/estilos.css
+++ b/estilos.css
@@ -5,7 +5,7 @@
 }
 body{
     font-family: 'Roboto', sans-serif;
-    background: url(/img/2.jpg);
+    background: url(./img/2.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     color: #fff;
