--- a/estilos.css
+++ b/estilos.css
@@ -41,31 +41,29 @@ body{
 }
 }
 nav>ul>li{
-    display: ;
-    margin: 20px;
+    width: 88%;
+    margin: 0;
+    padding: 25px 20px;
+    text-align: center;
+    border-bottom: 1.5px solid grey;
+    list-style: none;
 }
 .activo{
     text-decoration: none;
     color: #000;
     letter-spacing: 1px;
 }
-#menu-principal{
-    position: absolute;
+ul#menu-principal{
+    position: fixed;
     background: #fff;
-    z-index: 3;
-    width: 300px;
-    padding: 20px;
-    right: 0px;
-    bottom: 60%;
-    left: 77.5%;
+    width: 22.5%;
+    height: 100%;
+    right: -360px;
+    bottom: 0;
     transition: all .3s;
-    display: none;
 }
-nav>ul{
-    max-width: 600px;
-    position: relative;
-    left: 900px;
-    bottom: 50px;
+.derecha{
+    right: -200px;
 }
 .titulo-principal{
     position: relative;
@@ -133,16 +131,10 @@ nav>ul{
 .icon-gplus:hover{
     color: #dd4b39;
 }
-#home{
-    width: 20px;
-    position: relative;
-    right: 70px;
-    top: 4px;
-}
 #imagen-menu{
-    width: 35px;
-    position: relative;
-    left: 90%;
-    bottom: 55px;
+    width: 40px;
+    position: fixed;
+    left: 94%;
+    bottom: 700px;
     cursor: pointer;
 }
