--- a/estilos.css
+++ b/estilos.css
@@ -5,11 +5,14 @@
 }
 body{
     font-family: 'Roboto', sans-serif;
+    color: #fff;
+    z-index: 1;
+}
+#inicio{
     background: url(./img/2.jpg);
     background-repeat: no-repeat;
     background-size: cover;
-    color: #fff;
-    z-index: 1;
+    height: 800px;
 }
 #texto-logo{
     font-family: 'Raleway', sans-serif;
@@ -131,36 +134,58 @@ ul#menu-principal{
 #imagen-menu{
     width: 40px;
     position: fixed;
-    left: 92%;
+    left: 85%;
     bottom: 700px;
     cursor: pointer;
 }
 
 /* Sobre Nosotros */
-.tblock {
-    position: absolute;
-    left: 2.7%;
-    right: 2.7%;
-    padding-right: 10%;
-    padding-left: 10%;
-    background-color: rgba(24, 21, 21, 0.651);
-    color: white;
-    top: 70%;
-    border-style: groove;
-}
 
-.tittle {
+#nosotros{
+    width: 100%;
+    height: 800px;
+
+}
+#nosotros>h1{
+    position: relative;
+    left: 50%;
+    transform: translateX(-50%);
+    font-family: 'Raleway', sans-serif;
+    width: 1100px;
+    color: #333;
+    font-size: 50px;
     text-align: center;
-    margin-top: 3%;
-    margin-bottom: 3%;
-    letter-spacing: 2.5px;
-    font-size: 24px;
+    padding-top: 80px;
+    letter-spacing: 2px;
 }
-
-.pabout {
-    left: 10%;
-    right: 10%;
+.cubo1>img, .cubo2>img, .cubo3>img{
+    width: 140px;
+    position: relative;
+    left: 50%;
+    top: 10px;
+    transform: translateX(-50%);
+}
+.cubo1, .cubo2, .cubo3{
+    position: relative;
+    top: 50%;
+    transform: translateY(30%);
+    width: 30%;
+    height: 40%;
+    display: inline-block;
+    margin: 10px 24px;
+}
+.cubo1>h3, .cubo2>h3, .cubo3>h3{
+    text-align: center;
+    font-size: 28px;
+    position: relative;
+    top: 20px;
+    color: #333;
+}
+.cubo1>p, .cubo2>p, .cubo3>p{
+    text-align: center;
+    padding: 15px 15px;
+    margin-top: 25px;
     font-size: 18px;
-    text-align: justify;
-    margin-bottom: 3%;
+    font-weight: lighter;
+    color: #505050;
 }
