--- a/estilos.css
+++ b/estilos.css
@@ -197,10 +197,11 @@ ul#menu-principal{
 #myBtn{
     width: 60px;
     height: 60px;
-    background: tomato;
-    border: none;
-    font-size: 18px;
-    text-align: center;
-    position: absolute;
-    right: 0;
+    cursor: pointer;
+    display: none;
+    position: fixed;
+    bottom: 20px;
+    right: 30px;
+    z-index: 99;
+    padding: 15px;
 }
