--- a/estilos.css
+++ b/estilos.css
@@ -195,8 +195,8 @@ ul#menu-principal{
 /*BOTÓN SUBIR*/
 
 #myBtn{
-    width: 60px;
-    height: 60px;
+    width: 35px;
+    height: 35px;
     cursor: pointer;
     display: none;
     position: fixed;
@@ -204,4 +204,13 @@ ul#menu-principal{
     right: 30px;
     z-index: 99;
     padding: 15px;
+}
+
+/*BARRA*LATERAL*/
+body::-webkit-scrollbar{
+    width: 8px;
+}
+body::-webkit-scrollbar-thumb{
+    background: #333;
+    border-radius: 4px;
 }
