--- a/estilos.css
+++ b/estilos.css
@@ -18,12 +18,15 @@ body{
 }
 #texto-logo{
     font-family: 'Raleway', sans-serif;
-    max-width: 160px;
+    width: 150px;
     font-size: 30px;
     text-transform: uppercase;
     position: relative;
     left: 200px;
     bottom: 20px;
+}
+#logo{
+    width: 250px;
 }
 #logo>a{
     text-decoration: none;
@@ -33,7 +36,7 @@ body{
     width: 35px;
     font-size: 35px;
     position: relative;
-    left: 10%;
+    left: 64%;
     top: 22px;
     animation: rocket 2s alternate ease-in-out infinite;
 }
