--- a/estilos.css
+++ b/estilos.css
@@ -250,3 +250,33 @@ body::-webkit-scrollbar-thumb{
     height: 200px;
     text-align: center;
 }
+
+/*SEPARADOR*/
+#separador{
+    width: 100%;
+    height: 400px;
+    background: url(./img/7.jpg);
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+#separador>h1{
+    font-size: 70px;
+    position: relative;
+    font-family: 'Raleway', sans-serif;
+    top: 20%;
+    left: 55%;
+    transform: translate(-50%, -50%);
+    text-transform: capitalize;
+    letter-spacing: 2px;
+}
+#separador>p{
+    position: relative;
+    font-size: 18px;
+    font-weight: lighter;
+    width: 800px;
+    left: 5.5%;
+    top: 15%;
+    letter-spacing: 1px;
+}
