--- a/estilos.css
+++ b/estilos.css
@@ -280,3 +280,70 @@ body::-webkit-scrollbar-thumb{
     top: 15%;
     letter-spacing: 1px;
 }
+
+/* Contacto */
+#texto {
+    text-align: center;
+    margin-top: 3%;
+    color: black;
+    letter-spacing: 1px;
+    margin-bottom: 3%;
+}
+
+h3.contactott {
+    font-size: 36px;
+    font-weight: bold;
+    margin-bottom: 1%;
+}
+
+.mapa iframe {
+    width: 30%;
+    height: 50%;
+    border: none;
+    position: absolute;
+    left: 250px;
+    margin-bottom: 4%;
+}
+
+.formularios input, .formulariomensaje textarea {
+    width: 50%;
+    margin-top: 3px;
+    font-size: 14px;
+    color: #000;
+    padding: .8em .7em;
+    outline: none;
+    background: rgba(161, 160, 160, 0.062);
+    border: none;
+    border-radius: 0px;
+    box-shadow: 0px 0px 4px #888888;
+    float: right;
+    position: relative;
+    margin-bottom: 3px;
+}
+
+.formulariomensaje textarea {
+    float: right;
+    width: 50%;
+    height: 200px;
+    margin-top: 2%;
+}
+
+.enviar {
+    font-size: 16px;
+    padding: 6px 26px;
+    position: absolute;
+    font-weight: bold;
+    color: rgb(0, 0, 0);
+    background: #6161617a;
+    letter-spacing: 1px;
+    border: none;
+    top: 420px;
+    right: 260px;
+}
+
+.formulario {
+    position: absolute;
+    width: 60%;
+    right: 450px;
+}
+
