--- a/estilos.css
+++ b/estilos.css
@@ -282,6 +282,10 @@ body::-webkit-scrollbar-thumb{
 }
 
 /* Contacto */
+#contacto{
+    width: 100%;
+    height: 800px;
+}
 #texto {
     text-align: center;
     margin-top: 3%;
@@ -291,17 +295,19 @@ body::-webkit-scrollbar-thumb{
 }
 
 h3.contactott {
-    font-size: 36px;
+    font-size: 50px;
     font-weight: bold;
     margin-bottom: 1%;
+    font-family: 'Raleway', sans-serif;
+    color: #222;
 }
 
 .mapa iframe {
-    width: 30%;
-    height: 50%;
+    width: 500px;
+    height: 400px;
     border: none;
-    position: absolute;
-    left: 250px;
+    position: relative;
+    left: 10%;
     margin-bottom: 4%;
 }
 
@@ -319,6 +325,7 @@ h3.contactott {
     float: right;
     position: relative;
     margin-bottom: 3px;
+    resize: none;
 }
 
 .formulariomensaje textarea {
@@ -330,20 +337,24 @@ h3.contactott {
 
 .enviar {
     font-size: 16px;
-    padding: 6px 26px;
-    position: absolute;
+    padding: 10px 26px;
+    position: relative;
     font-weight: bold;
     color: rgb(0, 0, 0);
     background: #6161617a;
     letter-spacing: 1px;
     border: none;
-    top: 420px;
-    right: 260px;
+    top: 400px;
+    left: 48%;
+    cursor: pointer;
+    outline: 0;
 }
 
 .formulario {
-    position: absolute;
+    position: relative;
     width: 60%;
     right: 450px;
+    left: 14%;
+    bottom: 470px;
 }
 
