--- a/estilos.css
+++ b/estilos.css
@@ -221,7 +221,7 @@ body::-webkit-scrollbar-thumb{
 #instalaciones{
     width: 100%;
     height: 900px;
-    background: #333;
+    background: url(./img/5.jpg);
 }
 #instalaciones>h1{
     font-family: 'Raleway', sans-serif;
@@ -357,4 +357,22 @@ h3.contactott {
     left: 14%;
     bottom: 470px;
 }
-
+footer>h2{
+    text-align: center;
+    color: #fff;
+    font-weight: lighter;
+    padding: 15px;
+    font-size: 18px;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+}
+footer{
+    padding: 20px;
+    width: 100%;
+    height: 60px;
+    background: #111;
+    position: relative;
+    top: 100px;
+    bottom: 0px;
+}
