--- a/estilos.css
+++ b/estilos.css
@@ -221,7 +221,9 @@ body::-webkit-scrollbar-thumb{
 #instalaciones{
     width: 100%;
     height: 900px;
-    background: url(./img/5.jpg);
+    background: #222;
+    background-position: center;
+    background-size: cover;
 }
 #instalaciones>h1{
     font-family: 'Raleway', sans-serif;
