--- a/estilos.css
+++ b/estilos.css
@@ -30,6 +30,7 @@ body{
 }
 #logo>a{
     text-decoration: none;
+    text-shadow: 2px 2px grey;
     color: #fff;
 }
 #logo>a>img{
@@ -79,6 +80,8 @@ ul#menu-principal{
     text-align: justify;
     font-weight: lighter;
     font-size: 38px;
+    text-shadow: 2px 2px grey;
+    letter-spacing: 2px;
     text-transform: capitalize;
 }
 .parrafo-principal{
@@ -150,6 +153,7 @@ ul#menu-principal{
 #nosotros{
     width: 100%;
     height: 800px;
+    background-color: #e6e6e6;
 }
 #nosotros>h1{
     position: relative;
@@ -160,6 +164,7 @@ ul#menu-principal{
     color: #333;
     font-size: 50px;
     text-align: center;
+    text-shadow: 2px 2px grey;
     padding-top: 80px;
     letter-spacing: 2px;
 }
@@ -177,13 +182,16 @@ ul#menu-principal{
     width: 30%;
     height: 40%;
     display: inline-block;
-    margin: 10px 24px;
+    margin: 10px 15px;
 }
 .cubo1>h3, .cubo2>h3, .cubo3>h3{
     text-align: center;
     font-size: 28px;
     position: relative;
     top: 20px;
+    font-weight: bold;
+    text-shadow: 2px 2px white;
+    border-bottom: 2px solid grey;
     color: #333;
 }
 .cubo1>p, .cubo2>p, .cubo3>p{
@@ -220,7 +228,7 @@ body::-webkit-scrollbar-thumb{
 /*Instalaciones*/
 #instalaciones{
     width: 100%;
-    height: 900px;
+    height: 1100px;
     background: #222;
     background-position: center;
     background-size: cover;
@@ -231,6 +239,7 @@ body::-webkit-scrollbar-thumb{
     text-align: center;
     padding-top: 60px;
     letter-spacing: 2px;
+    text-shadow: 3px 3px black;
     color: #fff;
 }
 #instalaciones>p{
@@ -241,21 +250,23 @@ body::-webkit-scrollbar-thumb{
     color: #fff;
 }
 #imagenes{
-    width: 70%;
+    width: 90%;
     position: relative;
-    left: 55%;
-    top: 35%;
+    left: 50%;
+    top: 40%;
     transform: translate(-50%, -50%);
 }
 #imagenes>img{
     filter: grayscale(100%);
-    width: 320px;
+    width: 340px;
     height: 200px;
     text-align: center;
+    margin: 3%;
     transition: all .2s;
 }
 #imagenes>img:hover{
     filter: none;
+    transform: scale(1.35);
 }
 
 /*SEPARADOR*/
@@ -361,7 +372,7 @@ h3.contactott {
     position: relative;
     width: 60%;
     right: 450px;
-    left: 14%;
+    left: 18%;
     bottom: 470px;
 }
 footer>h2{
