--- a/estilos.css
+++ b/estilos.css
@@ -153,7 +153,7 @@ ul#menu-principal{
 #nosotros{
     width: 100%;
     height: 800px;
-    background-color: #e6e6e6;
+    background-color: #ebebeba1;
 }
 #nosotros>h1{
     position: relative;
@@ -199,6 +199,7 @@ ul#menu-principal{
     padding: 15px 15px;
     margin-top: 25px;
     font-size: 18px;
+    text-shadow: 2px 2px white;
     font-weight: lighter;
     color: #505050;
 }
@@ -245,6 +246,7 @@ body::-webkit-scrollbar-thumb{
 #instalaciones>p{
     margin: 15px 30px;
     font-size: 18px;
+    text-shadow: 2px 2px #000;
     font-weight: lighter;
     text-align: center;
     color: #fff;
@@ -280,19 +282,22 @@ body::-webkit-scrollbar-thumb{
     background-size: cover;
 }
 #separador>h1{
-    font-size: 70px;
+    font-size: 60px;
     position: relative;
     font-family: 'Raleway', sans-serif;
     top: 20%;
     left: 55%;
     transform: translate(-50%, -50%);
     text-transform: capitalize;
-    letter-spacing: 2px;
+    text-shadow: 2px 2px grey;
+    letter-spacing: 5px;
 }
 #separador>p{
     position: relative;
     font-size: 18px;
     font-weight: lighter;
+    text-shadow: 1px 1px rgb(93, 133, 133);
+    color: grey;
     width: 800px;
     left: 5.5%;
     top: 15%;
@@ -307,8 +312,11 @@ body::-webkit-scrollbar-thumb{
 #texto {
     text-align: center;
     margin-top: 3%;
-    color: black;
+    color: grey;
+    font-weight: bold;
+    text-shadow: 2px 2px white;
     letter-spacing: 1px;
+    font-size: 18px;
     margin-bottom: 3%;
 }
 
@@ -318,6 +326,7 @@ h3.contactott {
     margin-bottom: 1%;
     font-family: 'Raleway', sans-serif;
     color: #222;
+    text-shadow: 2px 2px grey;
 }
 
 .mapa iframe {
@@ -382,6 +391,7 @@ footer>h2{
     padding: 15px;
     font-size: 18px;
     position: absolute;
+    text-shadow: 2px 2px black;
     left: 50%;
     transform: translateX(-50%);
 }
